Se añade objeto Kirby y se muestra en html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,16 @@
 *{
-margin: 0;
-padding: 0
+    margin: 0;
+    padding: 0;
 }
 
 body{
-    font-family: 'Montserrat', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+
+.kirby{
+    width: 300px;
 }
