--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,9 +7,17 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 100%;
 }
 
+hr{
+    width: 100%;
+}
+section{
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
 
 .kirby{
     width: 300px;
